<resources>
    <string name="app_name">ToDoDroid</string>
    <string name="contact_email">202301178@iacademy.edu.ph</string>
    <string name="login_no_account_text">Don\'t have an account? Sign up here</string>
    <string name="signup_already_have_an_account">Already have an account? Log in here</string>
    <string name="description_hint">Write a description...</string>
    <string name="move_to_todo_button_text">Move to ToDo</string>
    <string name="move_to_doing_button_text">Move to Doing</string>
    <string name="move_to_done_button_text">Move to Done</string>
    <string name="create_todolist_label">Create ToDoList</string>
    <string name="create_todolist_hint">ToDoList name</string>
    <string name="header_placeholder">Header placeholder</string>
    <string name="hint_placeholder">Hint placeholder</string>
    <string name="title_hint">ToDo Title</string>
    <string name="create_submit_text">Create</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="save_text">Save</string>
    <string name="delete_text">Delete</string>
    <string name="options_text">Options</string>
    <string name="subject_text">Subject</string>
    <string name="description_text">Description</string>
    <string name="submit_text">Submit</string>
    <string name="greet_placeholder">Good morning,</string>
    <string name="username_placeholder">Username</string>
    <string name="email_placeholder">funguy@mail.com</string>
    <string name="profile_placeholder">Profile</string>
    <string name="rename_text">Rename</string>
</resources>
