<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/layout_todolist_options_dialog"
    android:background="@color/gruvbox_background" >

    <TextView
        android:id="@+id/todolistoption_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gruvbox_black"
        android:text="@string/header_placeholder"
        android:textColor="@color/gruvbox_blue_light"
        android:textSize="18sp"
        android:padding="10dp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/todolistoption_rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gruvbox_black"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@color/gruvbox_white_light"
        android:text="@string/rename_text"
        />

    <Button
        android:id="@+id/todolistoption_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gruvbox_black"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@color/gruvbox_red_light"
        android:text="@string/delete_text"
        />

</LinearLayout>
