<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_create_todolist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gruvbox_black"
    android:padding="15dp"
>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/createtodolist_text_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

    <TextView
        android:id="@+id/createtodolist_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_todolist_label"
        android:textColor="@color/gruvbox_white_light"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/createtodolist_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/gruvbox_white_light"
        android:textColorHint="@color/gruvbox_white"
        android:hint="@string/create_todolist_hint"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/createtodolist_label"
        app:layout_constraintStart_toStartOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createtodolist_text_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <Button
            android:id="@+id/createtodolist_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="14sp"
            android:background="@android:color/transparent"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/create_submit_text"
            />

        <Button
            android:id="@+id/createtodolist_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="14sp"
            android:background="@android:color/transparent"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@id/createtodolist_submit_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/cancel_text"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
