<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_support"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gruvbox_background"
    tools:context=".view.activity.ContactSupportActivity">

    <Toolbar
        android:id="@+id/contact_top_bar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/gruvbox_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/contact_header_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Contact Support"
            android:textColor="@color/gruvbox_white_light"
            android:textSize="14pt" />

    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_top_bar"
        app:layout_constraintBottom_toBottomOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            >

            <TextView
                android:id="@+id/contact_subject_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject_text"
                android:textColor="@color/gruvbox_white_light"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/contact_subject_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_input_background"
                android:inputType="text"
                android:textColor="@color/gruvbox_white_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contact_subject_label"
                />

            <TextView
                android:id="@+id/contact_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_text"
                android:textColor="@color/gruvbox_white_light"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contact_subject_field" />

            <EditText
                android:id="@+id/contact_description_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_input_background"
                android:minLines="5"
                android:gravity="top|start"
                android:inputType="text|textMultiLine"
                android:textColor="@color/gruvbox_white_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contact_description_label"
                />

            <Button
                android:id="@+id/contact_submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_text"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/gruvbox_green"
                app:layout_constraintTop_toBottomOf="@id/contact_description_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


